[package]
name = "randomforest"
version = "0.1.6"
edition = "2024"
description = "Random forest regressor and classifier"
homepage = "https://github.com/sile/randomforest"
repository = "https://github.com/sile/randomforest"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
byteorder = "1"
ordered-float = "2"
rand = "0.7"
rayon = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
