[package]
name = "randomforest"
version = "0.2.0"
edition = "2024"
description = "Random forest regressor and classifier"
homepage = "https://github.com/sile/randomforest"
repository = "https://github.com/sile/randomforest"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
rand = "0.10"
rayon = "1"
